# video-factory-public

./: .gitignore  CI_CD_TROUBLESHOOTING.md  NEXUS_WORKFLOW_DOCS.md  requirements.txt
mvp/commander_sim/: CONTEXT.md  README_BATCH.md  audio_events.json  batch_history.json  batch_pipeline.py  config.py  generate_video.py  index.html  mix_sfx.py  package-lock.json  package.json  pyproject.toml  render_final_video.py  render_frames.js  render_preview.js  render_preview.py  render_video.js  style.css
mvp/commander_sim/html_maps/: cross.html  duel.html  map1.html  map1_data.js  map2.html
mvp/commander_sim/js/: Game.js  main.js  recorder.js
mvp/commander_sim/js/core/: AI.js  Config.js  Entities.js  Geometry.js  MapGenerator.js  Simulation.js
mvp/commander_sim/js/view/: Audio.js  CommentarySystem.js  Particles.js  Renderer.js  ThemeManager.js
mvp/commander_sim/js/view/renderers/: BackgroundRenderer.js  (+2 more)
mvp/commander_sim/maps/: level1.json  level2.json  level3.json
mvp/commander_sim/pipeline/: audio_mixer.py  ffmpeg_utils.py  server.py
mvp/fortress_merge/: batch_pipeline.py  factory.py  generate_video.py  pyproject.toml  run_batch.py  run_fast.py  run_unified.py
mvp/fortress_merge/src/: assets.py  bot.py  components.py  config.py  director.py  entities.py  game.py  grid.py  physics.py  recorder.py
mvp/fortress_merge/tower_defense/: batch_pipeline.py  generate_video.py  pyproject.toml
mvp/fortress_merge/tower_defense/pipeline/: audio_gen.py
mvp/fortress_merge/tower_defense/sim/: config.py  engine.py  entities.py
mvp/fortress_merge/tower_defense/vis/: renderer.py
mvp/fortress_merge/utils/: synth.py  video_encoder.py
mvp/marble war/: arenas.py  assets.py  audio_renderer.py  batch_pipeline.py  config.py  debug_indentation.py  debug_system.py  effects.py  entities.py  fix_all_indent.py  fix_draw_indent.py  fix_game.py  fix_game_bomb.py  fix_game_final.py  fix_run_tail.py  game.py  game_physics.py  game_renderer.py  game_state.py  game_types.py  gamemodes.py  generate_video.py  pyproject.toml  render_audio.py  themes.py  video_generator.py
mvp/roguelike_survival_/: CONTEXT.md  README_CHANGES.md  batch_pipeline.py  generate_final.py  generate_preview.py  generate_video.py  main.py  manager.py  pyproject.toml
mvp/roguelike_survival_/src/: config.py  render_engine.py  utils.py
mvp/roguelike_survival_/src/entities/: enemy.py  orb.py  player.py  weapon.py
mvp/roguelike_survival_/src/systems/: background.py  camera.py  effects.py  gamemanager.py  hud.py  particles.py  physics.py  sound.py
mvp/roguelike_survival_/tests/: test_simulation.py
mvp/the_arena_of_algoritms/: CONTEXT.md  batch_pipeline.py  benchmark.py  create_final_video.py  generate_frames.py  generate_video.py  pyproject.toml  run_simulation_headless.py
mvp/the_arena_of_algoritms/src/: audio.py  config.py  effects.py  engine.py  recorder.py
mvp/the_arena_of_algoritms/src/entities/: __init__.py  base.py  chaos.py  glitch.py  laser.py  nanite.py  radar.py  snake.py  sonic.py  spawner.py  spiral.py  striker.py  swarm.py  tesla.py  volcano.py
mvp/the_arena_of_algoritms/src/systems/: battle.py  physics.py  projectile_manager.py  renderer.py
mvp/the_arena_of_algoritms/src/utils/: __init__.py  loader.py  metrics.py
mvp/the_arena_of_algoritms/tests/: test_mechanics.py
mvp/vibe_geometry/: .gitignore  DEBUG_README.md  README.md  batch_pipeline.py  generate_video.py  pipeline.py  playlist.txt  pyproject.toml  workflow.md
mvp/vibe_geometry/archive/harmonic_waves/: wormhole_logic.txt
mvp/vibe_geometry/data/: simulation_log.csv
mvp/vibe_geometry/scripts/: trim_audio.py
mvp/vibe_geometry/src/: analyzer.py  auto_pipeline.py  batch_pipeline.py  beat_timer.py  content_hunter.py  main.py  render_video_v2.py  smart_cutter.py  style_manager.py
(+49 files in other folders)
