[project]
name = "marble-war"
version = "0.1.0"
description = "Marble War simulation and video generation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.5.2",
    "pymunk>=6.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[tool.setuptools]
# Apenas arquivos Python na raiz são relevantes, mas como é um script, 
# podemos deixar o discovery encontrar os .py e ignorar as pastas de mídia.

[tool.setuptools.packages.find]
where = ["."]
exclude = ["assets*", "trilha_sonora*", "efeitos_sonoros*", "frames*"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
