[project]
name = "the-arena-of-algoritms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.1",
    "pygame>=2.6.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
